[gd_scene load_steps=7 format=3 uid="uid://bdlntsp7af0rw"]

[ext_resource type="Script" path="res://merchant_ui/merchant_ui.gd" id="1_3grw1"]
[ext_resource type="Texture2D" uid="uid://dq7q4d8ecl5c8" path="res://assets/sprites/inventory/inventory_high_res.png" id="2_627je"]
[ext_resource type="PackedScene" uid="uid://f8mkn4t1tykv" path="res://inventory/inventory_slot_ui.tscn" id="3_hrjiu"]
[ext_resource type="Script" path="res://inventory/drop_button_ui.gd" id="4_4ox7y"]
[ext_resource type="Texture2D" uid="uid://coajmjvwva2sy" path="res://assets/sprites/inventory/drop-button.png" id="5_whexn"]

[sub_resource type="Theme" id="Theme_v7u11"]

[node name="Merchant_UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 160.0
offset_bottom = 108.0
script = ExtResource("1_3grw1")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 159.0
offset_bottom = 108.0
texture = ExtResource("2_627je")
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = -25.5
offset_right = 39.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="InventorySlotUI" parent="NinePatchRect/GridContainer" instance=ExtResource("3_hrjiu")]
layout_mode = 2

[node name="InventorySlotUI2" parent="NinePatchRect/GridContainer" instance=ExtResource("3_hrjiu")]
layout_mode = 2

[node name="InventorySlotUI3" parent="NinePatchRect/GridContainer" instance=ExtResource("3_hrjiu")]
layout_mode = 2

[node name="InventorySlotUI4" parent="NinePatchRect/GridContainer" instance=ExtResource("3_hrjiu")]
layout_mode = 2

[node name="InventorySlotUI5" parent="NinePatchRect/GridContainer" instance=ExtResource("3_hrjiu")]
layout_mode = 2

[node name="InventorySlotUI6" parent="NinePatchRect/GridContainer" instance=ExtResource("3_hrjiu")]
layout_mode = 2

[node name="InventorySlotUI7" parent="NinePatchRect/GridContainer" instance=ExtResource("3_hrjiu")]
layout_mode = 2

[node name="InventorySlotUI8" parent="NinePatchRect/GridContainer" instance=ExtResource("3_hrjiu")]
layout_mode = 2

[node name="InventorySlotUI9" parent="NinePatchRect/GridContainer" instance=ExtResource("3_hrjiu")]
layout_mode = 2

[node name="InventorySlotUI10" parent="NinePatchRect/GridContainer" instance=ExtResource("3_hrjiu")]
layout_mode = 2

[node name="InventorySlotUI11" parent="NinePatchRect/GridContainer" instance=ExtResource("3_hrjiu")]
layout_mode = 2

[node name="InventorySlotUI12" parent="NinePatchRect/GridContainer" instance=ExtResource("3_hrjiu")]
layout_mode = 2

[node name="Title" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.5
offset_top = 9.0
offset_right = 68.5
offset_bottom = 32.0
grow_horizontal = 2
scale = Vector2(0.4, 0.4)
text = "Kupiec"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoneyLabel2" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.5
offset_top = 12.0
offset_right = -14.5
offset_bottom = 35.0
grow_horizontal = 2
scale = Vector2(0.25, 0.25)
text = "Złoto:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MerchantCoins" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -53.5
offset_top = 12.0
offset_right = -0.5
offset_bottom = 35.0
grow_horizontal = 2
scale = Vector2(0.25, 0.25)
text = "200"
vertical_alignment = 1

[node name="MoneyLabel" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 40.5
offset_top = 11.0
offset_right = 93.5
offset_bottom = 34.0
grow_horizontal = 2
scale = Vector2(0.25, 0.25)
text = "Złoto:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerCoins" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 55.5
offset_top = 11.0
offset_right = 108.5
offset_bottom = 34.0
grow_horizontal = 2
scale = Vector2(0.25, 0.25)
text = "200"
vertical_alignment = 1

[node name="ActionButton" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 65.0
offset_top = 90.0
offset_right = 189.0
offset_bottom = 121.0
scale = Vector2(0.25, 0.25)
theme = SubResource("Theme_v7u11")
text = "Kup"
script = ExtResource("4_4ox7y")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="NinePatchRect/ActionButton"]
visible = false
position = Vector2(13, 4)
scale = Vector2(0.251634, 0.251634)
texture = ExtResource("5_whexn")

[node name="DropButton" type="Button" parent="NinePatchRect"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 115.0
offset_top = 90.0
offset_right = 141.0
offset_bottom = 98.0
script = ExtResource("4_4ox7y")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="NinePatchRect/DropButton"]
position = Vector2(13, 4)
scale = Vector2(0.251634, 0.251634)
texture = ExtResource("5_whexn")

[node name="BuyVariantButton" type="Button" parent="NinePatchRect"]
layout_mode = 2
offset_left = 54.0
offset_top = 19.0
offset_right = 164.0
offset_bottom = 50.0
scale = Vector2(0.2, 0.2)
theme = SubResource("Theme_v7u11")
text = "Kup"
script = ExtResource("4_4ox7y")
metadata/_edit_group_ = true

[node name="SellVariantButton" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 84.0
offset_top = 19.0
offset_right = 194.0
offset_bottom = 50.0
scale = Vector2(0.2, 0.2)
theme = SubResource("Theme_v7u11")
text = "Sprzedaj"
script = ExtResource("4_4ox7y")
metadata/_edit_group_ = true

[connection signal="pressed" from="NinePatchRect/ActionButton" to="NinePatchRect/ActionButton" method="_on_pressed"]
[connection signal="pressed" from="NinePatchRect/DropButton" to="NinePatchRect/DropButton" method="_on_pressed"]
[connection signal="pressed" from="NinePatchRect/BuyVariantButton" to="NinePatchRect/BuyVariantButton" method="_on_pressed"]
[connection signal="pressed" from="NinePatchRect/SellVariantButton" to="NinePatchRect/SellVariantButton" method="_on_pressed"]
